# cargo-wtf-why-are-you-drunk

./: README.md  rust-toolchain.toml  trigger.sh
exhibit1/happy_case/: Cargo.toml
exhibit1/happy_case/crate1/: Cargo.toml
exhibit1/sad_case/: trigger.sh
exhibit1/sad_case/crate2/: Cargo.toml
exhibit2/happy_case/: Cargo.toml  trigger.sh
exhibit2/sad_case/: Cargo.toml  trigger.sh
exhibit2/sad_case/rootcrate/: Cargo.toml
exhibit2/sad_case/subcrate/: Cargo.toml
